--- a/composer.json
+++ b/composer.json
@@ -1,5 +1,5 @@
 {
-    "name": "recca0120/comet-chat",
+    "name": "recca0120/cometchat",
     "description": "",
     "license": "MIT",
     "authors": [
