--- a/composer.json
+++ b/composer.json
@@ -1,6 +1,6 @@
 {
     "name": "recca0120/cometchat",
-    "description": "",
+    "description": "CometChat's REST API",
     "license": "MIT",
     "authors": [
         {
