--- a/tests/fixtures/auth_token/flush_auth_tokens.yaml
+++ b/tests/fixtures/auth_token/flush_auth_tokens.yaml
@@ -2,7 +2,7 @@
 -
     request:
         method: DELETE
-        url: 'https://244134adc586447f.api-us.cometchat.io/v3/users/uuid_999/auth_tokens'
+        url: 'https://244134adc586447f.api-us.cometchat.io/v3/users/user_000/auth_tokens'
         headers:
             Host: 244134adc586447f.api-us.cometchat.io
             Expect: ''
@@ -17,11 +17,11 @@
             code: 200
             message: OK
         headers:
-            Date: 'Tue, 05 Sep 2023 05:13:07 GMT'
+            Date: 'Thu, 14 Sep 2023 05:12:29 GMT'
             Content-Type: application/json
             Content-Length: '88'
             Connection: keep-alive
-            Server: 'Apache/2.4.54 () OpenSSL/1.0.2k-fips'
+            Server: ''
             cache-control: 'must-revalidate, no-cache, private'
             Vary: Accept-Encoding
             Content-Encoding: none
@@ -31,45 +31,46 @@
             X-RateLimit-Remaining-For-App: '99998'
             Access-Control-Allow-Origin: '*'
             Access-Control-Allow-Methods: 'OPTIONS,HEAD,GET,POST,PUT,PATCH,DELETE'
-            Access-Control-Allow-Headers: 'Content-Type,Accept,Cache-Control,Authorization,X-Requested-With,appId,apiKey,authToken,onBehalfOf,resource,Accept-Encoding,group,region,sdk,guid,uid,clientEnvironment,extensionId,username,password,callToken'
+            Access-Control-Allow-Headers: 'Content-Type,Accept,Cache-Control,Authorization,X-Requested-With,appId,apiKey,authToken,onBehalfOf,resource,Accept-Encoding,group,region,sdk,guid,uid,clientEnvironment,extensionId,username,password,callToken,onBehalfOfUser'
             Accept: application/json
-        body: '{"data":{"success":true,"message":"Cleared Auth Tokens successfully for uid uuid_999."}}'
+            Upgrade: 'h2,h2c'
+        body: '{"data":{"success":true,"message":"Cleared Auth Tokens successfully for uid user_000."}}'
         curl_info:
-            url: 'https://244134adc586447f.api-us.cometchat.io/v3/users/uuid_999/auth_tokens'
+            url: 'https://244134adc586447f.api-us.cometchat.io/v3/users/user_000/auth_tokens'
             content_type: application/json
             http_code: 200
-            header_size: 772
+            header_size: 768
             request_size: 249
             filetime: -1
             ssl_verify_result: 0
             redirect_count: 0
-            total_time: 1.124962
-            namelookup_time: 0.120825
-            connect_time: 0.358319
-            pretransfer_time: 0.841948
+            total_time: 0.998452
+            namelookup_time: 0.001975
+            connect_time: 0.22609
+            pretransfer_time: 0.667425
             size_upload: 2.0
             size_download: 88.0
-            speed_download: 78.0
-            speed_upload: 1.0
+            speed_download: 88.0
+            speed_upload: 2.0
             download_content_length: 88.0
             upload_content_length: 2.0
-            starttransfer_time: 1.124891
+            starttransfer_time: 0.998275
             redirect_time: 0.0
             redirect_url: ''
-            primary_ip: 3.128.187.224
+            primary_ip: 3.140.14.70
             certinfo: {  }
             primary_port: 443
             local_ip: 192.168.15.243
-            local_port: 51114
+            local_port: 57367
             http_version: 2
             protocol: 2
             ssl_verifyresult: 0
             scheme: HTTPS
-            appconnect_time_us: 841552
-            connect_time_us: 358319
-            namelookup_time_us: 120825
-            pretransfer_time_us: 841948
+            appconnect_time_us: 667155
+            connect_time_us: 226090
+            namelookup_time_us: 1975
+            pretransfer_time_us: 667425
             redirect_time_us: 0
-            starttransfer_time_us: 1124891
-            total_time_us: 1124962
+            starttransfer_time_us: 998275
+            total_time_us: 998452
     index: 0
