--- a/tests/fixtures/auth_token/update_auth_token.yaml
+++ b/tests/fixtures/auth_token/update_auth_token.yaml
@@ -2,7 +2,7 @@
 -
     request:
         method: PUT
-        url: 'https://244134adc586447f.api-us.cometchat.io/v3/users/uuid_999/auth_tokens/uuid_999_16938906989ce9b1f42c23c6434b8ef8872e5625'
+        url: 'https://244134adc586447f.api-us.cometchat.io/v3/users/user_000/auth_tokens/user_000_1694668129d2eca40a65abba29e6860224018ad8'
         headers:
             Host: 244134adc586447f.api-us.cometchat.io
             Expect: ''
@@ -17,60 +17,60 @@
             code: 200
             message: OK
         headers:
-            Date: 'Tue, 05 Sep 2023 05:12:07 GMT'
+            Date: 'Thu, 14 Sep 2023 05:09:40 GMT'
             Content-Type: application/json
             Content-Length: '114'
             Connection: keep-alive
-            Server: 'Apache/2.4.54 () OpenSSL/1.0.2k-fips'
+            Server: ''
             cache-control: 'must-revalidate, no-cache, private'
             Vary: Accept-Encoding
             Content-Encoding: none
             X-RateLimit-Limit: '20000'
-            X-RateLimit-Remaining: '19997'
+            X-RateLimit-Remaining: '19999'
             X-RateLimit-Limit-For-App: '100000'
-            X-RateLimit-Remaining-For-App: '99997'
+            X-RateLimit-Remaining-For-App: '99999'
             Access-Control-Allow-Origin: '*'
             Access-Control-Allow-Methods: 'OPTIONS,HEAD,GET,POST,PUT,PATCH,DELETE'
-            Access-Control-Allow-Headers: 'Content-Type,Accept,Cache-Control,Authorization,X-Requested-With,appId,apiKey,authToken,onBehalfOf,resource,Accept-Encoding,group,region,sdk,guid,uid,clientEnvironment,extensionId,username,password,callToken'
+            Access-Control-Allow-Headers: 'Content-Type,Accept,Cache-Control,Authorization,X-Requested-With,appId,apiKey,authToken,onBehalfOf,resource,Accept-Encoding,group,region,sdk,guid,uid,clientEnvironment,extensionId,username,password,callToken,onBehalfOfUser'
             Accept: application/json
             Upgrade: 'h2,h2c'
-        body: '{"data":{"uid":"uuid_999","authToken":"uuid_999_16938906989ce9b1f42c23c6434b8ef8872e5625","createdAt":1693890698}}'
+        body: '{"data":{"uid":"user_000","authToken":"user_000_1694668129d2eca40a65abba29e6860224018ad8","createdAt":1694668129}}'
         curl_info:
-            url: 'https://244134adc586447f.api-us.cometchat.io/v3/users/uuid_999/auth_tokens/uuid_999_16938906989ce9b1f42c23c6434b8ef8872e5625'
+            url: 'https://244134adc586447f.api-us.cometchat.io/v3/users/user_000/auth_tokens/user_000_1694668129d2eca40a65abba29e6860224018ad8'
             content_type: application/json
             http_code: 200
-            header_size: 790
+            header_size: 769
             request_size: 296
             filetime: -1
             ssl_verify_result: 0
             redirect_count: 0
-            total_time: 1.030636
-            namelookup_time: 0.002359
-            connect_time: 0.2452
-            pretransfer_time: 0.687165
+            total_time: 1.315582
+            namelookup_time: 0.06891
+            connect_time: 0.358463
+            pretransfer_time: 0.972978
             size_upload: 2.0
             size_download: 114.0
-            speed_download: 110.0
+            speed_download: 86.0
             speed_upload: 1.0
             download_content_length: 114.0
             upload_content_length: 2.0
-            starttransfer_time: 1.030601
+            starttransfer_time: 1.315545
             redirect_time: 0.0
             redirect_url: ''
-            primary_ip: 18.223.197.243
+            primary_ip: 18.218.180.174
             certinfo: {  }
             primary_port: 443
             local_ip: 192.168.15.243
-            local_port: 51070
+            local_port: 56655
             http_version: 2
             protocol: 2
             ssl_verifyresult: 0
             scheme: HTTPS
-            appconnect_time_us: 686818
-            connect_time_us: 245200
-            namelookup_time_us: 2359
-            pretransfer_time_us: 687165
+            appconnect_time_us: 972800
+            connect_time_us: 358463
+            namelookup_time_us: 68910
+            pretransfer_time_us: 972978
             redirect_time_us: 0
-            starttransfer_time_us: 1030601
-            total_time_us: 1030636
+            starttransfer_time_us: 1315545
+            total_time_us: 1315582
     index: 0
