--- a/tests/fixtures/block_user/block_user.yaml
+++ b/tests/fixtures/block_user/block_user.yaml
@@ -2,7 +2,7 @@
 -
     request:
         method: POST
-        url: 'https://244134adc586447f.api-us.cometchat.io/v3/users/user_000/auth_tokens'
+        url: 'https://244134adc586447f.api-us.cometchat.io/v3/users/user_000/blockedusers'
         headers:
             Host: 244134adc586447f.api-us.cometchat.io
             Expect: ''
@@ -11,66 +11,66 @@
             accept: application/json
             apikey: 4c3e5b5a96da90cc4bb3f3013d22e72aaea802c9
             content-type: application/json
-        body: '{"force":true}'
+        body: '{"blockedUids":["user_001"]}'
     response:
         status:
             code: 200
             message: OK
         headers:
-            Date: 'Thu, 14 Sep 2023 05:08:49 GMT'
+            Date: 'Thu, 14 Sep 2023 04:55:38 GMT'
             Content-Type: application/json
-            Content-Length: '114'
+            Content-Length: '121'
             Connection: keep-alive
             Server: ''
             cache-control: 'must-revalidate, no-cache, private'
             Vary: Accept-Encoding
             Content-Encoding: none
             X-RateLimit-Limit: '20000'
-            X-RateLimit-Remaining: '19997'
+            X-RateLimit-Remaining: '19998'
             X-RateLimit-Limit-For-App: '100000'
-            X-RateLimit-Remaining-For-App: '99971'
+            X-RateLimit-Remaining-For-App: '99999'
             Access-Control-Allow-Origin: '*'
             Access-Control-Allow-Methods: 'OPTIONS,HEAD,GET,POST,PUT,PATCH,DELETE'
             Access-Control-Allow-Headers: 'Content-Type,Accept,Cache-Control,Authorization,X-Requested-With,appId,apiKey,authToken,onBehalfOf,resource,Accept-Encoding,group,region,sdk,guid,uid,clientEnvironment,extensionId,username,password,callToken,onBehalfOfUser'
             Accept: application/json
             Upgrade: 'h2,h2c'
-        body: '{"data":{"uid":"user_000","authToken":"user_000_1694668129d2eca40a65abba29e6860224018ad8","createdAt":1694668129}}'
+        body: '{"data":{"user_001":{"success":true,"message":"The user with UID user_000 has blocked user with UID user_001 successfully."}}}'
         curl_info:
-            url: 'https://244134adc586447f.api-us.cometchat.io/v3/users/user_000/auth_tokens'
+            url: 'https://244134adc586447f.api-us.cometchat.io/v3/users/user_000/blockedusers'
             content_type: application/json
             http_code: 200
             header_size: 769
-            request_size: 260
+            request_size: 275
             filetime: -1
             ssl_verify_result: 0
             redirect_count: 0
-            total_time: 1.311496
-            namelookup_time: 0.002071
-            connect_time: 0.295685
-            pretransfer_time: 0.910273
-            size_upload: 14.0
-            size_download: 114.0
-            speed_download: 86.0
-            speed_upload: 10.0
-            download_content_length: 114.0
-            upload_content_length: 14.0
-            starttransfer_time: 1.311422
+            total_time: 1.088914
+            namelookup_time: 0.003857
+            connect_time: 0.232944
+            pretransfer_time: 0.706467
+            size_upload: 28.0
+            size_download: 121.0
+            speed_download: 111.0
+            speed_upload: 25.0
+            download_content_length: 121.0
+            upload_content_length: 28.0
+            starttransfer_time: 1.088797
             redirect_time: 0.0
             redirect_url: ''
             primary_ip: 3.141.182.110
             certinfo: {  }
             primary_port: 443
             local_ip: 192.168.15.243
-            local_port: 56443
+            local_port: 53080
             http_version: 2
             protocol: 2
             ssl_verifyresult: 0
             scheme: HTTPS
-            appconnect_time_us: 910121
-            connect_time_us: 295685
-            namelookup_time_us: 2071
-            pretransfer_time_us: 910273
+            appconnect_time_us: 706257
+            connect_time_us: 232944
+            namelookup_time_us: 3857
+            pretransfer_time_us: 706467
             redirect_time_us: 0
-            starttransfer_time_us: 1311422
-            total_time_us: 1311496
+            starttransfer_time_us: 1088797
+            total_time_us: 1088914
     index: 0
