--- a/tests/fixtures/user/create_user.yaml
+++ b/tests/fixtures/user/create_user.yaml
@@ -11,65 +11,66 @@
             accept: application/json
             apikey: 4c3e5b5a96da90cc4bb3f3013d22e72aaea802c9
             content-type: application/json
-        body: '{"uid":"uuid_999","name":"test","avatar":"https:\/\/via.placeholder.com\/640x480.png\/001122?text=accusamus","link":"https:\/\/ankunding.com\/commodi-debitis-sed-laboriosam-aliquid-voluptatum-enim-doloremque","withAuthToken":true}'
+        body: '{"uid":"user_000","name":"test","avatar":"https:\/\/via.placeholder.com\/640x480.png\/001122?text=accusamus","link":"https:\/\/ankunding.com\/commodi-debitis-sed-laboriosam-aliquid-voluptatum-enim-doloremque","withAuthToken":true}'
     response:
         status:
             code: 200
             message: OK
         headers:
-            Date: 'Tue, 05 Sep 2023 05:03:10 GMT'
+            Date: 'Thu, 14 Sep 2023 05:01:21 GMT'
             Content-Type: application/json
             Content-Length: '341'
             Connection: keep-alive
-            Server: 'Apache/2.4.54 () OpenSSL/1.0.2k-fips'
+            Server: ''
             cache-control: 'must-revalidate, no-cache, private'
             Vary: Accept-Encoding
             Content-Encoding: none
             X-RateLimit-Limit: '10000'
-            X-RateLimit-Remaining: '9999'
+            X-RateLimit-Remaining: '9998'
             X-RateLimit-Limit-For-App: '100000'
-            X-RateLimit-Remaining-For-App: '99999'
+            X-RateLimit-Remaining-For-App: '99997'
             Access-Control-Allow-Origin: '*'
             Access-Control-Allow-Methods: 'OPTIONS,HEAD,GET,POST,PUT,PATCH,DELETE'
-            Access-Control-Allow-Headers: 'Content-Type,Accept,Cache-Control,Authorization,X-Requested-With,appId,apiKey,authToken,onBehalfOf,resource,Accept-Encoding,group,region,sdk,guid,uid,clientEnvironment,extensionId,username,password,callToken'
+            Access-Control-Allow-Headers: 'Content-Type,Accept,Cache-Control,Authorization,X-Requested-With,appId,apiKey,authToken,onBehalfOf,resource,Accept-Encoding,group,region,sdk,guid,uid,clientEnvironment,extensionId,username,password,callToken,onBehalfOfUser'
             Accept: application/json
-        body: '{"data":{"uid":"uuid_999","name":"test","link":"https:\/\/ankunding.com\/commodi-debitis-sed-laboriosam-aliquid-voluptatum-enim-doloremque","avatar":"https:\/\/via.placeholder.com\/640x480.png\/001122?text=accusamus","status":"offline","role":"default","createdAt":1693890190,"authToken":"uuid_999_169389019006af5f20091733fd94305f2c626ba2"}}'
+            Upgrade: 'h2,h2c'
+        body: '{"data":{"uid":"user_000","name":"test","link":"https:\/\/ankunding.com\/commodi-debitis-sed-laboriosam-aliquid-voluptatum-enim-doloremque","avatar":"https:\/\/via.placeholder.com\/640x480.png\/001122?text=accusamus","status":"offline","role":"default","createdAt":1694667681,"authToken":"user_000_169466768147ce45a79418c20c57234ba9694e2f"}}'
         curl_info:
             url: 'https://244134adc586447f.api-us.cometchat.io/v3/users'
             content_type: application/json
             http_code: 200
-            header_size: 772
+            header_size: 768
             request_size: 456
             filetime: -1
             ssl_verify_result: 0
             redirect_count: 0
-            total_time: 1.061445
-            namelookup_time: 0.104164
-            connect_time: 0.321055
-            pretransfer_time: 0.774388
+            total_time: 1.2965
+            namelookup_time: 0.069234
+            connect_time: 0.368379
+            pretransfer_time: 0.985155
             size_upload: 230.0
             size_download: 341.0
-            speed_download: 321.0
-            speed_upload: 216.0
+            speed_download: 263.0
+            speed_upload: 177.0
             download_content_length: 341.0
             upload_content_length: 230.0
-            starttransfer_time: 1.061369
+            starttransfer_time: 1.296391
             redirect_time: 0.0
             redirect_url: ''
-            primary_ip: 3.23.177.254
+            primary_ip: 18.218.180.174
             certinfo: {  }
             primary_port: 443
             local_ip: 192.168.15.243
-            local_port: 50683
+            local_port: 54518
             http_version: 2
             protocol: 2
             ssl_verifyresult: 0
             scheme: HTTPS
-            appconnect_time_us: 773980
-            connect_time_us: 321055
-            namelookup_time_us: 104164
-            pretransfer_time_us: 774388
+            appconnect_time_us: 984721
+            connect_time_us: 368379
+            namelookup_time_us: 69234
+            pretransfer_time_us: 985155
             redirect_time_us: 0
-            starttransfer_time_us: 1061369
-            total_time_us: 1061445
+            starttransfer_time_us: 1296391
+            total_time_us: 1296500
     index: 0
