--- a/tests/fixtures/user/create_user_fail.yaml
+++ b/tests/fixtures/user/create_user_fail.yaml
@@ -11,66 +11,66 @@
             accept: application/json
             apikey: 4c3e5b5a96da90cc4bb3f3013d22e72aaea802c9
             content-type: application/json
-        body: '{"uid":"uuid_999","name":"test","avatar":"https:\/\/via.placeholder.com\/640x480.png\/001122?text=accusamus","link":"https:\/\/ankunding.com\/commodi-debitis-sed-laboriosam-aliquid-voluptatum-enim-doloremque","withAuthToken":true}'
+        body: '{"uid":"user_000","name":"test","avatar":"https:\/\/via.placeholder.com\/640x480.png\/001122?text=accusamus","link":"https:\/\/ankunding.com\/commodi-debitis-sed-laboriosam-aliquid-voluptatum-enim-doloremque","withAuthToken":true}'
     response:
         status:
             code: 400
             message: 'Bad Request'
         headers:
-            Date: 'Tue, 05 Sep 2023 05:03:55 GMT'
+            Date: 'Thu, 14 Sep 2023 05:02:03 GMT'
             Content-Type: application/json
             Content-Length: '301'
             Connection: keep-alive
-            Server: 'Apache/2.4.54 () OpenSSL/1.0.2k-fips'
+            Server: ''
             cache-control: 'must-revalidate, no-cache, private'
             Vary: Accept-Encoding
             Content-Encoding: none
             X-RateLimit-Limit: '10000'
             X-RateLimit-Remaining: '9998'
             X-RateLimit-Limit-For-App: '100000'
-            X-RateLimit-Remaining-For-App: '99998'
+            X-RateLimit-Remaining-For-App: '99995'
             Access-Control-Allow-Origin: '*'
             Access-Control-Allow-Methods: 'OPTIONS,HEAD,GET,POST,PUT,PATCH,DELETE'
-            Access-Control-Allow-Headers: 'Content-Type,Accept,Cache-Control,Authorization,X-Requested-With,appId,apiKey,authToken,onBehalfOf,resource,Accept-Encoding,group,region,sdk,guid,uid,clientEnvironment,extensionId,username,password,callToken'
+            Access-Control-Allow-Headers: 'Content-Type,Accept,Cache-Control,Authorization,X-Requested-With,appId,apiKey,authToken,onBehalfOf,resource,Accept-Encoding,group,region,sdk,guid,uid,clientEnvironment,extensionId,username,password,callToken,onBehalfOfUser'
             Accept: application/json
             Upgrade: 'h2,h2c'
-        body: '{"error":{"message":"The uid uuid_999 already exists. Please use another uid or try after permanently deleting the user.","devMessage":"The uid uuid_999 already exists. Please use another uid or try recreating after permanently deleting the user.","source":"chat-api","code":"ERR_UID_ALREADY_EXISTS"}}'
+        body: '{"error":{"message":"The uid user_000 already exists. Please use another uid or try after permanently deleting the user.","devMessage":"The uid user_000 already exists. Please use another uid or try recreating after permanently deleting the user.","source":"chat-api","code":"ERR_UID_ALREADY_EXISTS"}}'
         curl_info:
             url: 'https://244134adc586447f.api-us.cometchat.io/v3/users'
             content_type: application/json
             http_code: 400
-            header_size: 798
+            header_size: 777
             request_size: 456
             filetime: -1
             ssl_verify_result: 0
             redirect_count: 0
-            total_time: 0.969695
-            namelookup_time: 0.002348
-            connect_time: 0.221246
-            pretransfer_time: 0.676646
+            total_time: 0.990097
+            namelookup_time: 0.002848
+            connect_time: 0.235635
+            pretransfer_time: 0.70745
             size_upload: 230.0
             size_download: 301.0
-            speed_download: 310.0
-            speed_upload: 237.0
+            speed_download: 304.0
+            speed_upload: 232.0
             download_content_length: 301.0
             upload_content_length: 230.0
-            starttransfer_time: 0.96959
+            starttransfer_time: 0.990001
             redirect_time: 0.0
             redirect_url: ''
-            primary_ip: 3.128.187.224
+            primary_ip: 3.140.14.70
             certinfo: {  }
             primary_port: 443
             local_ip: 192.168.15.243
-            local_port: 50721
+            local_port: 54701
             http_version: 2
             protocol: 2
             ssl_verifyresult: 0
             scheme: HTTPS
-            appconnect_time_us: 676444
-            connect_time_us: 221246
-            namelookup_time_us: 2348
-            pretransfer_time_us: 676646
+            appconnect_time_us: 707211
+            connect_time_us: 235635
+            namelookup_time_us: 2848
+            pretransfer_time_us: 707450
             redirect_time_us: 0
-            starttransfer_time_us: 969590
-            total_time_us: 969695
+            starttransfer_time_us: 990001
+            total_time_us: 990097
     index: 0
