--- a/tests/fixtures/user/delete_user.yaml
+++ b/tests/fixtures/user/delete_user.yaml
@@ -2,7 +2,7 @@
 -
     request:
         method: DELETE
-        url: 'https://244134adc586447f.api-us.cometchat.io/v3/users/uuid_999'
+        url: 'https://244134adc586447f.api-us.cometchat.io/v3/users/user_000'
         headers:
             Host: 244134adc586447f.api-us.cometchat.io
             Expect: ''
@@ -17,60 +17,60 @@
             code: 200
             message: OK
         headers:
-            Date: 'Tue, 05 Sep 2023 05:05:27 GMT'
+            Date: 'Thu, 14 Sep 2023 05:03:46 GMT'
             Content-Type: application/json
             Content-Length: '91'
             Connection: keep-alive
-            Server: 'Apache/2.4.54 () OpenSSL/1.0.2k-fips'
+            Server: ''
             cache-control: 'must-revalidate, no-cache, private'
             Vary: Accept-Encoding
             Content-Encoding: none
             X-RateLimit-Limit: '10000'
             X-RateLimit-Remaining: '9999'
             X-RateLimit-Limit-For-App: '100000'
-            X-RateLimit-Remaining-For-App: '99997'
+            X-RateLimit-Remaining-For-App: '99999'
             Access-Control-Allow-Origin: '*'
             Access-Control-Allow-Methods: 'OPTIONS,HEAD,GET,POST,PUT,PATCH,DELETE'
-            Access-Control-Allow-Headers: 'Content-Type,Accept,Cache-Control,Authorization,X-Requested-With,appId,apiKey,authToken,onBehalfOf,resource,Accept-Encoding,group,region,sdk,guid,uid,clientEnvironment,extensionId,username,password,callToken'
+            Access-Control-Allow-Headers: 'Content-Type,Accept,Cache-Control,Authorization,X-Requested-With,appId,apiKey,authToken,onBehalfOf,resource,Accept-Encoding,group,region,sdk,guid,uid,clientEnvironment,extensionId,username,password,callToken,onBehalfOfUser'
             Accept: application/json
             Upgrade: 'h2,h2c'
-        body: '{"data":{"success":true,"message":"User with UID uuid_999 has been deleted successfully."}}'
+        body: '{"data":{"success":true,"message":"User with UID user_000 has been deleted successfully."}}'
         curl_info:
-            url: 'https://244134adc586447f.api-us.cometchat.io/v3/users/uuid_999'
+            url: 'https://244134adc586447f.api-us.cometchat.io/v3/users/user_000'
             content_type: application/json
             http_code: 200
-            header_size: 788
+            header_size: 767
             request_size: 254
             filetime: -1
             ssl_verify_result: 0
             redirect_count: 0
-            total_time: 1.340452
-            namelookup_time: 0.002667
-            connect_time: 0.400207
-            pretransfer_time: 0.974044
+            total_time: 1.15748
+            namelookup_time: 0.003291
+            connect_time: 0.352514
+            pretransfer_time: 0.869207
             size_upload: 18.0
             size_download: 91.0
-            speed_download: 67.0
-            speed_upload: 13.0
+            speed_download: 78.0
+            speed_upload: 15.0
             download_content_length: 91.0
             upload_content_length: 18.0
-            starttransfer_time: 1.340422
+            starttransfer_time: 1.157437
             redirect_time: 0.0
             redirect_url: ''
-            primary_ip: 18.223.197.243
+            primary_ip: 3.141.182.110
             certinfo: {  }
             primary_port: 443
             local_ip: 192.168.15.243
-            local_port: 50801
+            local_port: 55129
             http_version: 2
             protocol: 2
             ssl_verifyresult: 0
             scheme: HTTPS
-            appconnect_time_us: 973690
-            connect_time_us: 400207
-            namelookup_time_us: 2667
-            pretransfer_time_us: 974044
+            appconnect_time_us: 868790
+            connect_time_us: 352514
+            namelookup_time_us: 3291
+            pretransfer_time_us: 869207
             redirect_time_us: 0
-            starttransfer_time_us: 1340422
-            total_time_us: 1340452
+            starttransfer_time_us: 1157437
+            total_time_us: 1157480
     index: 0
