--- a/tests/fixtures/user/delete_user_fail.yaml
+++ b/tests/fixtures/user/delete_user_fail.yaml
@@ -2,7 +2,7 @@
 -
     request:
         method: DELETE
-        url: 'https://244134adc586447f.api-us.cometchat.io/v3/users/uuid_999'
+        url: 'https://244134adc586447f.api-us.cometchat.io/v3/users/user_000'
         headers:
             Host: 244134adc586447f.api-us.cometchat.io
             Expect: ''
@@ -17,59 +17,60 @@
             code: 404
             message: 'Not Found'
         headers:
-            Date: 'Tue, 05 Sep 2023 05:05:38 GMT'
+            Date: 'Thu, 14 Sep 2023 05:04:01 GMT'
             Content-Type: application/json
             Content-Length: '274'
             Connection: keep-alive
-            Server: 'Apache/2.4.54 () OpenSSL/1.0.2k-fips'
+            Server: ''
             cache-control: 'must-revalidate, no-cache, private'
             Vary: Accept-Encoding
             Content-Encoding: none
             X-RateLimit-Limit: '10000'
             X-RateLimit-Remaining: '9998'
             X-RateLimit-Limit-For-App: '100000'
-            X-RateLimit-Remaining-For-App: '99999'
+            X-RateLimit-Remaining-For-App: '99998'
             Access-Control-Allow-Origin: '*'
             Access-Control-Allow-Methods: 'OPTIONS,HEAD,GET,POST,PUT,PATCH,DELETE'
-            Access-Control-Allow-Headers: 'Content-Type,Accept,Cache-Control,Authorization,X-Requested-With,appId,apiKey,authToken,onBehalfOf,resource,Accept-Encoding,group,region,sdk,guid,uid,clientEnvironment,extensionId,username,password,callToken'
+            Access-Control-Allow-Headers: 'Content-Type,Accept,Cache-Control,Authorization,X-Requested-With,appId,apiKey,authToken,onBehalfOf,resource,Accept-Encoding,group,region,sdk,guid,uid,clientEnvironment,extensionId,username,password,callToken,onBehalfOfUser'
             Accept: application/json
-        body: '{"error":{"message":"The UID uuid_999 does not exist, please make sure you have created a user with UID uuid_999.","devMessage":"The UID uuid_999 does not exist, so please make sure you have created a user with UID uuid_999.","source":"chat-api","code":"ERR_UID_NOT_FOUND"}}'
+            Upgrade: 'h2,h2c'
+        body: '{"error":{"message":"The UID user_000 does not exist, please make sure you have created a user with UID user_000.","devMessage":"The UID user_000 does not exist, so please make sure you have created a user with UID user_000.","source":"chat-api","code":"ERR_UID_NOT_FOUND"}}'
         curl_info:
-            url: 'https://244134adc586447f.api-us.cometchat.io/v3/users/uuid_999'
+            url: 'https://244134adc586447f.api-us.cometchat.io/v3/users/user_000'
             content_type: application/json
             http_code: 404
-            header_size: 779
+            header_size: 775
             request_size: 254
             filetime: -1
             ssl_verify_result: 0
             redirect_count: 0
-            total_time: 1.020949
-            namelookup_time: 0.003609
-            connect_time: 0.2289
-            pretransfer_time: 0.738678
+            total_time: 0.986678
+            namelookup_time: 0.003543
+            connect_time: 0.230022
+            pretransfer_time: 0.695747
             size_upload: 18.0
             size_download: 274.0
-            speed_download: 268.0
-            speed_upload: 17.0
+            speed_download: 277.0
+            speed_upload: 18.0
             download_content_length: 274.0
             upload_content_length: 18.0
-            starttransfer_time: 1.0207
+            starttransfer_time: 0.986514
             redirect_time: 0.0
             redirect_url: ''
-            primary_ip: 3.128.187.224
+            primary_ip: 3.140.14.70
             certinfo: {  }
             primary_port: 443
             local_ip: 192.168.15.243
-            local_port: 50810
+            local_port: 55188
             http_version: 2
             protocol: 2
             ssl_verifyresult: 0
             scheme: HTTPS
-            appconnect_time_us: 736564
-            connect_time_us: 228900
-            namelookup_time_us: 3609
-            pretransfer_time_us: 738678
+            appconnect_time_us: 695533
+            connect_time_us: 230022
+            namelookup_time_us: 3543
+            pretransfer_time_us: 695747
             redirect_time_us: 0
-            starttransfer_time_us: 1020700
-            total_time_us: 1020949
+            starttransfer_time_us: 986514
+            total_time_us: 986678
     index: 0
