--- a/tests/fixtures/user/get_user.yaml
+++ b/tests/fixtures/user/get_user.yaml
@@ -2,7 +2,7 @@
 -
     request:
         method: GET
-        url: 'https://244134adc586447f.api-us.cometchat.io/v3/users/uuid_999'
+        url: 'https://244134adc586447f.api-us.cometchat.io/v3/users/user_000'
         headers:
             Host: 244134adc586447f.api-us.cometchat.io
             Expect: ''
@@ -17,60 +17,60 @@
             code: 200
             message: OK
         headers:
-            Date: 'Tue, 05 Sep 2023 05:04:55 GMT'
+            Date: 'Thu, 14 Sep 2023 05:03:16 GMT'
             Content-Type: application/json
             Content-Length: '150'
             Connection: close
-            Server: 'Apache/2.4.54 () OpenSSL/1.0.2k-fips'
+            Server: ''
             cache-control: 'must-revalidate, no-cache, private'
             Vary: Accept-Encoding
             Content-Encoding: none
             X-RateLimit-Limit: '20000'
             X-RateLimit-Remaining: '19997'
             X-RateLimit-Limit-For-App: '100000'
-            X-RateLimit-Remaining-For-App: '99998'
+            X-RateLimit-Remaining-For-App: '99997'
             Access-Control-Allow-Origin: '*'
             Access-Control-Allow-Methods: 'OPTIONS,HEAD,GET,POST,PUT,PATCH,DELETE'
-            Access-Control-Allow-Headers: 'Content-Type,Accept,Cache-Control,Authorization,X-Requested-With,appId,apiKey,authToken,onBehalfOf,resource,Accept-Encoding,group,region,sdk,guid,uid,clientEnvironment,extensionId,username,password,callToken'
+            Access-Control-Allow-Headers: 'Content-Type,Accept,Cache-Control,Authorization,X-Requested-With,appId,apiKey,authToken,onBehalfOf,resource,Accept-Encoding,group,region,sdk,guid,uid,clientEnvironment,extensionId,username,password,callToken,onBehalfOfUser'
             Accept: application/json
             Upgrade: 'h2,h2c'
-        body: '{"data":{"uid":"uuid_999","name":"test","link":"https:\/\/foo.bar","status":"offline","role":"default","createdAt":1693890190,"updatedAt":1693890247}}'
+        body: '{"data":{"uid":"user_000","name":"test","link":"https:\/\/foo.bar","status":"offline","role":"default","createdAt":1694667681,"updatedAt":1694667756}}'
         curl_info:
-            url: 'https://244134adc586447f.api-us.cometchat.io/v3/users/uuid_999'
+            url: 'https://244134adc586447f.api-us.cometchat.io/v3/users/user_000'
             content_type: application/json
             http_code: 200
-            header_size: 785
+            header_size: 764
             request_size: 234
             filetime: -1
             ssl_verify_result: 0
             redirect_count: 0
-            total_time: 1.108922
-            namelookup_time: 0.002539
-            connect_time: 0.314856
-            pretransfer_time: 0.835363
+            total_time: 1.094694
+            namelookup_time: 0.008038
+            connect_time: 0.274526
+            pretransfer_time: 0.787376
             size_upload: 2.0
             size_download: 150.0
-            speed_download: 135.0
+            speed_download: 137.0
             speed_upload: 1.0
             download_content_length: 150.0
             upload_content_length: 2.0
-            starttransfer_time: 1.108883
+            starttransfer_time: 1.094607
             redirect_time: 0.0
             redirect_url: ''
-            primary_ip: 18.223.197.243
+            primary_ip: 3.140.14.70
             certinfo: {  }
             primary_port: 443
             local_ip: 192.168.15.243
-            local_port: 50781
+            local_port: 55001
             http_version: 2
             protocol: 2
             ssl_verifyresult: 0
             scheme: HTTPS
-            appconnect_time_us: 834598
-            connect_time_us: 314856
-            namelookup_time_us: 2539
-            pretransfer_time_us: 835363
+            appconnect_time_us: 787240
+            connect_time_us: 274526
+            namelookup_time_us: 8038
+            pretransfer_time_us: 787376
             redirect_time_us: 0
-            starttransfer_time_us: 1108883
-            total_time_us: 1108922
+            starttransfer_time_us: 1094607
+            total_time_us: 1094694
     index: 0
